<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500sp"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/msg_box"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/dialog_connection_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="30dp"
            android:adjustViewBounds="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/blocked_account"/>

        <TextView
            android:id="@+id/dialog_blocked_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/title_you_are_blocked"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_blocked_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="@string/you_are_blocked"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_blocked_retry"
            android:layout_width="180sp"
            android:layout_height="50dp"
            android:alpha="0.8"
            android:text="@string/retry"
            android:textColor="@color/all_buttons"
            app:backgroundTint="@color/green" />

        <Button
            android:id="@+id/btn_blocked_exit"
            android:layout_width="180sp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/exit_window"
            android:textColor="@color/all_buttons"
            app:backgroundTint="@color/of_dark_bule" />
    </LinearLayout>
</RelativeLayout>