<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:background="@drawable/rc_white"
        android:orientation="vertical"
        android:padding="15sp">

        <TextView
            android:id="@+id/dialog_profile_titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_avatar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_profile_inputView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/enter_avatar_url" />

        <EditText
            android:id="@+id/dialog_profile_inputEdit"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="4dp"
            android:background="@drawable/rc_input"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/dialog_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="5dp"
            android:text="@string/update"
            android:textColor="@color/white"
            app:backgroundTint="@color/blue" />
    </LinearLayout>
</RelativeLayout>