<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:windowSoftInputMode="stateHidden">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4sp"
        android:background="@drawable/appbar"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name_paypal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#3CFFC107"
                    android:paddingStart="8sp"
                    android:text="@string/username"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#41FFC107"
                    android:gravity="end"
                    android:paddingStart="5sp"
                    android:text="@string/stars"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_balance_paypal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:background="#3BFFC107"
                    android:ellipsize="end"
                    android:lines="1"
                    android:paddingEnd="2sp"
                    android:text="@string/_0"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_marginEnd="5sp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo2"
                    android:src="@drawable/icon_coin"
                    tools:ignore="ImageContrastCheck" />

                <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/btn_refresh_paypal"
                    android:layout_width="45sp"
                    android:layout_height="45sp"
                    android:contentDescription="@string/todo"
                    android:padding="4sp"
                    app:srcCompat="@drawable/refresh" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_paypal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="40sp"
        android:indeterminateTint="@color/green"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_paypal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</LinearLayout>